--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
 		"user.h": "c",
 		"types.h": "c",
 		"stat.h": "c",
-		"string_view": "c"
+		"string_view": "c",
+		"spinlock.h": "c",
+		"date.h": "c"
 	}
 }
